tdf#119993 sw: clear the font cache text glyphs on table col change

This helps not storing pre-computed vcl text layouts which are most
probably never re-used anymore.

Approximate numbers for memory usage with 10 column resizes for the
bugdoc:

- old: 310MB -> 454MB

- new: 309MB -> 310MB

Change-Id: Ifb88b88e1bffe2c2670089930fc2d22ff19576ce